# Skagway

./: CMakeLists.txt  camera.cpp  camera.h  conn.cpp  conn.h  main.cpp  protocol.h  server.cpp  server.h  socket.cpp  socket.h  utility.cpp  utility.h
test/: camera_test.h  client_inet_worker_test.cpp  client_inet_worker_test_config.json  conn_test.h  fake_client.cpp  fake_client.h  mock_camera.cpp  mock_camera.h  proto_test.h  server_test.h  socket_test.h  test_config_1.json  utility_test.h
